--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -174,7 +174,7 @@
   {%- endif -%}
 
   {% section 'header' %}
-
+  knlkfnlsknlkskdnlfkslakfnljafkjabkjfbdksjbflkjgf;
   <div class="page-container drawer-page-content" id="PageContainer">
 
     <main class="main-content js-focus-hidden" id="MainContent" role="main" tabindex="-1">
