--- a/templates/page.news.liquid
+++ b/templates/page.news.liquid
@@ -2,11 +2,13 @@
   <div class="grid">
     <div class="grid__item medium-up--five-sixths medium-up--push-one-twelfth">
       <div class="section-header text-center">
-        <h1>{{ page.title }}</h1>
+        <h1>NEWS</h1>
+        <p>お知らせ</P>
       </div>
 
       <div class="rte">
         {{ page.content }}
+        
       </div>
     </div>
   </div>
