--- a/templates/page.news.liquid
+++ b/templates/page.news.liquid
@@ -50,6 +50,9 @@
     .breadcrumb span {
       color:rgb(164, 164, 164);
     }
+    .section-header {
+      margin-bottom: 10px;
+    }
     .section-title {
       font-size:1.8em;
     }
@@ -74,6 +77,26 @@
   @media screen and (max-width: 749px) {
     .breadcrumb {
       display:none;
+    }
+    .section-title {
+      font-size:1.5em;
+    }
+    .rte {
+      border-top: 1px solid rgb(240, 230, 221);
+    }
+    .news-content {
+      line-height: 1em;
+      margin: 0;
+      font-size :1em;
+      padding : 1.5em 0;
+      border-bottom: 1px solid rgb(240, 230, 221);
+    }
+    .news-content a {
+      border-bottom:none !important;
+    }
+    .pagination {
+      text-align :center;
+      margin-bottom: 50px;
     }
   }
 </style>
