--- a/templates/page.news.liquid
+++ b/templates/page.news.liquid
@@ -78,6 +78,9 @@
     .breadcrumb {
       display:none;
     }
+    .section-header {
+      margin-bottom: 10px;
+    }
     .section-title {
       font-size:1.5em;
     }
