--- a/templates/page.news-contents.liquid
+++ b/templates/page.news-contents.liquid
@@ -72,6 +72,10 @@
       font-size: 1.5em;
       text-align:left;
     }
+    .rte {
+      padding-bottom: 80px !important;
+      border-bottom: 1px solid rgb(240, 240, 240);
+    }
     .pagination {
       text-align :center;
       font-weight: bold;
