--- a/templates/page.news.liquid
+++ b/templates/page.news.liquid
@@ -81,10 +81,15 @@
       display:none;
     }
     .section-header {
+      margin-top: 20px;
       margin-bottom: 50px;
     }
     .section-title {
       font-size:1.5em;
+      line-height: 2em;
+    }
+    .section-title p {
+      font-size: 0.8em;
     }
     .rte {
       border-top: 1px solid rgb(240, 240, 240);
