--- a/templates/page.news-contents.liquid
+++ b/templates/page.news-contents.liquid
@@ -75,6 +75,7 @@
     .rte {
       padding-bottom: 50px !important;
       border-bottom: 1px solid rgb(240, 240, 240);
+      line-height: 1.5em;
     }
     .pagination {
       text-align :center;
