--- a/templates/page.minimalist.liquid
+++ b/templates/page.minimalist.liquid
@@ -6,7 +6,8 @@
   <div class="grid">
     <div class="grid__item medium-up--five-sixths medium-up--push-one-twelfth">
       <div class="section-header text-center">
-        <h1>{{ page.title }}</h1>
+        {% comment %} <h1>{{ page.title }}</h1> {% endcomment %}
+        <h1>コピーが入ります<br>コピーが入ります。</h1>
       </div>
 
       <div class="rte">
@@ -25,6 +26,9 @@
   </div>
 
   <div class="third-section">
+    <div class="third-section-content">collection</div>
+    <div class="third-section-content">collection</div>
+    <div class="third-section-content">collection</div>
   </div>
 
   <div class="fourth-section">
@@ -46,7 +50,7 @@
     .minimalist-header {
       background-color: lightgray;
       margin-bottom: 100px;
-      height: 500px;
+      height: 600px;
     }
     .minimalist-header img{
     }
@@ -54,6 +58,10 @@
       font-size: 0.9em;
     }
     .rte {
+      width: 500px;
+      text-align: center;
+      margin: 0 auto;
+      font-size: 1em;
       padding-bottom: 100px;
     }
     #second-section {
@@ -93,6 +101,19 @@
       grid-area: areaF;
       background:lightgray;
     }
+    .third-section {
+      width: 100%;
+      height: auto;
+      margin-bottom: 100px;
+    }
+    .third-section-content {
+      border: 1px solid black;
+      padding: 100px 0;
+      font-size: 3em;
+      margin-bottom: 50px;
+      width: 100%;
+      height: 300px;
+    }
     .fourth-section {
       height: auto;
       width: 100%;
@@ -111,17 +132,27 @@
     .fourth-section-contents h2 {
       display: block;
       padding: 50px;
-      width: 40%;
+      width: 45%;
+      line-height: 1.5em;
     }
     .fourth-section-contents div {
       padding: 50px;
-      width: 40%;
+      width: 45%;
+      font-size: 0.9em;
+      line-height: 1.5em;
     }
     .fourth-section-contents a {
-      margin: 30px;
+      display:block;
+      margin: 30px 0;
       border:1px solid black;
-      width: 100px;
-      line-height: 2em;
+      width: 300px;
+      line-height: 2.5em;
+      text-align: center;
+    }
+    .fourth-section-contents a:hover {
+      transition: 0.5s;
+      color: white;
+      background: black;
     }
   }
   @media screen and (max-width: 749px) {
