--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -498,68 +498,69 @@
 </div>
 
 <!-- ＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃　　　　　　サイトヘッダー＿NAV　　　　　＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃ -->
-      <style>
+<style>
 
-        @media screen and (min-width: 750px) {
-          .site-header {
-            padding: 0 20px;
-          }
+  @media screen and (min-width: 750px) {
+    .site-header {
+      padding: 0 20px;
+    }
 
-          #AccessibleNav {
-            width: calc(100vw - 260px);
-          }
-          .site-nav--active{
-            font-weight: bold;
-            margin-right: 1%;
-          }
-          .site-nav__label {
-            border: none;
-          }
-          .site-nav--active:nth-of-type(1):after {
-            content: "用途別商品一覧";
-            font-weight: normal;
-            font-size: 12px;
-          }
-          .site-nav--active:nth-of-type(2):after {
-            content: "商品一覧";
-            font-weight: normal;
-            font-size: 12px;
-          }
-          .site-nav--active:nth-of-type(3){
+    #AccessibleNav {
+      width: calc(100vw - 260px);
+    }
+    .site-nav--active{
+      font-weight: bold;
+      margin-right: 1%;
+    }
+    .site-nav__label {
+      border: none;
+    }
+    .site-nav--active:nth-of-type(1):after {
+      content: "用途別商品一覧";
+      font-weight: normal;
+      font-size: 12px;
+    }
+    .site-nav--active:nth-of-type(2):after {
+      content: "商品一覧";
+      font-weight: normal;
+      font-size: 12px;
+    }
+    .site-nav--active:nth-of-type(3){
 /*             margin-right: calc(100% - 700px); */
-            margin-right: 10%;
-          }
-          .site-nav--active:nth-of-type(3):after {
-            content: "導入事例";
-            font-weight: normal;
-            font-size: 12px;
-          }
-          .site-nav--active:nth-of-type(4):after {
-            content: "WAAKについて";
-            font-weight: normal;
-            font-size: 12px;
-          }
-          .site-nav--active:nth-of-type(5):after {
-            content: "購入サポート";
-            font-weight: normal;
-            font-size: 12px;
-          }
-          .site-nav--active:nth-of-type(6):after {
-            content: "  ワアク・フォー・ビズ";
-            font-weight: normal;
-            font-size: 12px;
-          }
-          .site-header__icons{
-            width:50px;
-          }
-          .logo-align--left{
-            width: 170px;
-          }
-        }
-        @media screen and (max-width: 749px) {
-          .site-header__cart{
-          display:none;}
-        }
+      margin-right: 10%;
+    }
+    .site-nav--active:nth-of-type(3):after {
+      content: "導入事例";
+      font-weight: normal;
+      font-size: 12px;
+    }
+    .site-nav--active:nth-of-type(4):after {
+      content: "WAAKについて";
+      font-weight: normal;
+      font-size: 12px;
+    }
+    .site-nav--active:nth-of-type(5):after {
+      content: "購入サポート";
+      font-weight: normal;
+      font-size: 12px;
+    }
+    .site-nav--active:nth-of-type(6):after {
+      content: "  ワアク・フォー・ビズ";
+      font-weight: normal;
+      font-size: 12px;
+    }
+    .site-header__icons{
+      width:50px;
+    }
+    .logo-align--left{
+      width: 170px;
+    }
+  }
+  @media screen and (max-width: 749px) {
+    .site-header__cart{
+      display:none;
+    }
+  }
       </style>
 <!-- ＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃　　　　　　サイトヘッダー＿NAV　　　　　＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃ -->
 
