--- a/templates/page.minimalist.liquid
+++ b/templates/page.minimalist.liquid
@@ -5,9 +5,9 @@
 <div class="page-width">
   <div class="grid">
     <div class="grid__item medium-up--five-sixths medium-up--push-one-twelfth">
-      <div class="section-header text-center">
+      <div class="first-section section-header text-center">
         {% comment %} <h1>{{ page.title }}</h1> {% endcomment %}
-        <h1>コピーが入ります<br>コピーが入ります。</h1>
+        <h1　class="h1-text">コピーが入ります<br>コピーが入ります。</h1>
       </div>
 
       <div class="rte">
@@ -54,7 +54,10 @@
     }
     .minimalist-header img{
     }
-    .section-header {
+    .first-section h1 {
+      font-size: 1em;
+    }
+    .first-section {
       font-size: 0.9em;
     }
     .rte {
